Anmeldeformular wurde jetzt um eine Benutzerprüfung addiert.

--- a/views/index.pug
+++ b/views/index.pug
@@ -13,7 +13,7 @@ body
     br
     label(for="password_id") Password:
     br
-    input(type="text" id="password_id" name="password")
+    input(type="password" id="password_id" name="password")
     br
     br
-    button(id="submit_button_id" value="Submit" onclick="sendFormula('username_id'),sendFormula('password_id')")
+    button(id="submit_button_id" value="Submit" onclick="sendFormula('username_id', 'password_id')") Login
